syntax = "proto3";

option go_package = "m3online/rpc";
option csharp_namespace = "M3Online.Grpc.BattleService";

import "domain/enter.proto";
import "domain/enemy.proto";
import "domain/attack.proto";
import "domain/user.proto";

service BattleService {
  rpc EnterBattle(EnterRequest) returns (EnterResponse) {}
  rpc Connect(ConnectionRequest) returns (stream EnemySituation) {}
  rpc Attack(stream AttackRequest) returns (SessionSummary) {}
  rpc ReceiveUsers(ConnectionRequest) returns (stream UserList){}
  rpc Exit(ExitRequest) returns (ExitResponse){}
}

message EnterRequest {
  string battleId = 1;
  string user_name = 2;
}

message EnterResponse {
  Enter enter = 1;
}

message ConnectionRequest {
  Enter enter = 1;
}

message EnemySituation {
  Enemy enemy = 1;
}

message AttackRequest {
  Attack attack = 1;
}

message SessionSummary {
  int32 totalAttack = 1;
}

message UserList {
  map<uint32, User> user_map = 1; //Key„ÅØEnter.EnterId
}

message ExitRequest {
  Enter enter = 1;
}

message ExitResponse {
  ResultCode result = 1;
}

enum ResultCode {
  UNKNOWN = 0;
  SUCCESS = 1;
  ERROR = 2;
}